# calc

./: CMakeLists.txt  README.md  run.ps1
examples/: example1.calc
src/: lexer.cpp  main.cpp
src/include/: lexer.h  parser.h
